Fix pub list on small devices

--- a/styles.scss
+++ b/styles.scss
@@ -181,7 +181,6 @@ body {
 }
 
 .preview-image {
-  display: block;
   width: 10rem;
   height: 7rem;
   background-size: cover;
